--- a/config.json
+++ b/config.json
@@ -4,13 +4,29 @@
       "listen_addr": ":80",
       "target_addr": "192.168.129.88:80",
       "protocol": "tcp"
-    },
-    {
-      "listen_addr": ":25566",
-      "target_addr": "192.168.129.86:25565",
-      "protocol": "tcp"
     }
   ],
+  "router": {
+    "enable_router": true,
+    "routes": [
+      {
+        "listen_url": "vault.meng.zip",
+        "port": ":47319",
+        "target_addr": "192.168.129.88:80",
+        "type": "proxy",
+        "protocol": "tcp"
+      }
+    ]
+  },
+  "tls": {
+    "enable_tls": true,
+    "cert_file": "./tls/domain.pem",
+    "key_file": "./tls/priv.pem",
+    "domains": [
+      "proxy.meng.zip",
+      "vault.meng.zip"
+    ]
+  },
   "firewall": {
     "enable_firewall": true,
     "default_allow": false
@@ -22,6 +38,7 @@
   "webserver": {
     "enable_webserver": true,
     "listen_port": ":47319",
+    "listen_url": "proxy.meng.zip",
     "static_dir": "./static",
     "keys_dir": "./keys"
   }
