--- a/config.json
+++ b/config.json
@@ -13,9 +13,9 @@
       "protocol": "web"
     },
     {
-      "listen_url": "vault.domain.com",
+      "listen_url": "proxmox.domain.com",
       "port": ":47319",
-      "target_addr": "192.168.129.88:80",
+      "target_addr": "192.168.129.89:80",
       "type": "proxy",
       "protocol": "web",
       "allow_insecure": true,
@@ -28,7 +28,8 @@
     "key_file": "./tls/priv.pem",
     "domains": [
       "proxy.domain.com",
-      "vault.domain.com"
+      "vault.domain.com",
+      "proxmox.domain.com"
     ]
   },
   "firewall": {
