Static folder serve

--- a/config.json
+++ b/config.json
@@ -13,6 +13,13 @@
       "protocol": "web"
     },
     {
+      "listen_url": "static.domain.com",
+      "port": ":443",
+      "target_addr": "./static",
+      "type": "static",
+      "protocol": "web"
+    },
+    {
       "listen_url": "proxmox.domain.com",
       "port": ":47319",
       "target_addr": "192.168.129.89:80",
